# lab002-python-rest-api

./: .envrc  .gitignore  Dockerfile  Makefile  lab002-python-rest-api.postman_collection.json  lab002-python-rest-api.postman_environment.json  pytest.ini  requirements.txt  setup.cfg
answer_key/network_request/: __init__.py  api_auth.py  apis.py  auth.py  sample_data.py  services.py
answer_key/network_request/models/: App_Rights.py  VLAN_Service.py
answer_key/network_request/templates/: base.j2  home.j2  login.j2
network_request/: __init__.py  apis.py  home.py
network_request/models/: TACACS_Auth.py
network_request/templates/: hello_template.j2  profile.j2  services.j2
stubs/network_request/models/: App_Rights.pyi  TACACS_Auth.pyi  VLAN_Service.pyi
stubs/tacacs_plus/: accounting.pyi  authentication.pyi  authorization.pyi  client.pyi  flags.pyi  packet.pyi
tests/: conftest.py  test_api.py  test_auth.py  test_home.py  test_services.py  test_tacacsc.py
