[metadata]
name = network_request
version = 1.0.0
# url = 
license = MIT
maintainer = hpreston
# maintainer_email = 
description = A demonstration application using TACACS authentication from Python
# long_description = file: README.rst
# long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    #tacacs-plus

[options.extras_require]
test =
    black
    flake8
    mypy
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    network_request

[flake8]
max-line-length = 120
max-complexity = 10
select = B,C,D,E,F,W,B9  # T4 - flake8-mypy,
ignore = E501,W503,E203,D100,DAR202,DAR402
statistics = true
exclude = .venv,.pytest_cache,.mypy_cache
docstring-convention = google

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true

[darglint]
strictness = short
docstring_style = google
ignore = DAR402,DAR202    